# oxideav-lagarith

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: fuzz.yml
benches/: decode.rs  encode.rs  fixtures_64.rs
examples/: profile_decode.rs  profile_encode.rs
fuzz/: Cargo.toml
fuzz/corpus/decode_lagarith/: regression_prob_table_overflow  solid_grey  solid_rgb  solid_rgba  uncompressed_bgr24
fuzz/fuzz_targets/: decode_lagarith.rs
src/: channel.rs  decoder.rs  encoder.rs  error.rs  fibonacci.rs  frame.rs  frame_header.rs  legacy_range_coder.rs  lib.rs  model.rs  plane.rs  predict.rs  predictor.rs  range_coder.rs  registry.rs  rle.rs  roundtrip_tests.rs  tables.rs
tables/: 00-rangecoder-reciprocal-multiply-lut.csv  01-residual-rle-decoder-lut.csv  02-residual-rle-encoder-inv-lut.csv  README.md
tests/: decode_avi_fixture.rs  embedded_fixture_conformance.rs  ffmpeg_pins.rs  reference_pins.rs
tests/data/: solid5_720x480_rgba.avi
