[package]
name = "oxideav-lagarith"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-lagarith"
authors = ["Mark Karpeles"]
description = "Pure-Rust Lagarith lossless video decoder for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-lagarith"
keywords = ["multimedia", "video", "lagarith", "lossless", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[features]
default = ["registry"]
# Wire the crate's `Decoder` impl + `register(ctx)` entry point into
# `oxideav-core`'s codec registry. Disable for standalone builds that
# want the decoder without dragging in the framework.
registry = ["dep:oxideav-core"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }
