[package]
name = "oxideav-lagarith"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-lagarith"
authors = ["Mark Karpeles"]
description = "Pure-Rust Lagarith lossless video decoder for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-lagarith"
keywords = ["multimedia", "video", "lagarith", "lossless", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[features]
default = ["registry"]
# Wire the crate's `Decoder` impl + `register(ctx)` entry point into
# `oxideav-core`'s codec registry. Disable for standalone builds that
# want the decoder without dragging in the framework.
registry = ["dep:oxideav-core"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }

[dev-dependencies]
# Round 301 (depth-mode benchmarks): Criterion drives the `decode`
# bench harness that future decoder-optimisation rounds use to A/B
# their changes against a stable per-format pixel-rate baseline.
# Pinned to the same 0.5 line the other OxideAV crates with benches
# (flac, vp8, prores, tta) already track.
criterion = "0.5"

# Round 301 bench. Self-contained: every input is a real compressed
# Lagarith frame embedded inline (captured once from the crate's own
# reference encoder), decoded through the public `decode_frame`. No
# committed fixture files, no `docs/` reads at bench time. Run with:
#     cargo bench -p oxideav-lagarith --bench decode
[[bench]]
name = "decode"
harness = false

# Encode hot-path benchmark (round 376). Times the public
# `encode_frame` across every host pixel family on deterministically
# synthesised gradient+noise input. No committed fixtures, no `docs/`
# reads at bench time. Run with:
#     cargo bench -p oxideav-lagarith --bench encode
[[bench]]
name = "encode"
harness = false
